nfs/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nfs
  namespace: tsebra-home
spec:
  securityContext:
    privileged: true
  selector:
    matchLabels:
      app: nfs
  replicas: 1
  template:
    metadata:
      labels:
        app: nfs
    spec:
      containers:
        - image: pedroetb/nfs-server
          name: nfs
          ports:
            - containerPort: 2049
          volumeMounts:
            - name: data
              mountPath: /mnt
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: nfs-data
