nfs/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: nfs
  namespace: tsebra-home
spec:
  entryPoints:
    - nfs
  routes:
    - services:
        - name: nfs
          port: 2049
