nfs/service.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: nfs
  namespace: tsebra-home
spec:
  entryPoints:
    - nfs
  routes:
    - match: HostSNI(`nfs.tsebra-home.de`)
      priority: 10
      services:
        - name: nfs
          port: 2049
          nativeLB: true
